update routeflow